<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="@color/Black">
 
		<!--  Header Starts-->

		<LinearLayout
		    android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header_gradient"
		    android:paddingBottom="5dip"
		    android:paddingTop="5dip" >

		        <!-- Logo Start-->
		        <ImageView android:src="@drawable/logo2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dip"/>
		        <!-- Logo Ends -->
		</LinearLayout>
		<!--  Header Ends -->
		
		<!-- Footer Start -->
		<!-- Aqui iría el codigo de diseño del pie -->
		<!-- Footer Ends -->
		
		<!-- Login Form -->

		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/header"
		            android:orientation="vertical"
		            android:padding="10dip" >

		            <!-- Email Label -->

		            <EditText
		                android:id="@+id/loginEmail"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="@dimen/margin_bottom_edit_text"
		                android:layout_marginTop="@dimen/margin_bottom_edit_text"
		                android:layout_weight="0.14"
		                android:hint="@string/txt_email"
		                android:singleLine="true" />

		            <!-- Password Label -->

		            <EditText
		                android:id="@+id/loginPassword"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="@dimen/margin_bottom_edit_text"
		                android:layout_marginTop="@dimen/margin_bottom_edit_text"
		                android:hint="@string/txt_password"
		                android:password="true"
		                android:singleLine="true" >

		                <requestFocus />
		            </EditText>

		            <!-- Enlace de texto de recuperar contraseña -->
		            <TextView
		                android:id="@+id/link_to_recovery_password"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="40dip"
		                android:layout_marginTop="40dip"
		                android:gravity="center"
		                android:text="@string/no_recuerdas_password"
		                android:textColor="@color/White"
		                android:textSize="15dip" />

		            <!-- Boton Login -> ir a la pantalla Principal -->

		            <Button
		                android:id="@+id/btnLogin"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="@dimen/margin_bottom_edit_text"
		                android:layout_marginTop="@dimen/margin_top_edit_text"
		                android:text="@string/boton_login" />

		            <!-- Boton para ir a la pantalla de Registro -->

		            <Button
		                android:id="@+id/btnLinkToRegister"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="@dimen/margin_bottom_edit_text"
		                android:layout_marginTop="@dimen/margin_top_edit_text"
		                android:text="@string/boton_nuevo_usuario" />

		        </LinearLayout>

		<!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>
